<resources>
    <string name="app_name">Notefy</string>

    <string name="my_notes">My Notes</string>
    <string name="Welcome_title">NOTEFY</string>
    <string name="welcome_footer">One Place For All Your Notes</string>

    <string name="Sample_note_title">Note 1</string>
    <string name="Sample_note_body">This is some sample note. I am writing something just to test whether everything is working fine or not.</string>

    <string name="edit_note">Edit Note</string>
    <string name="add_note">Add Note</string>
    <string name="title">Title</string>
    <string name="body">Body</string>

    <string name="save">Save</string>
    <string name="hint_title">Enter your Note Title</string>
    <string name="hint_body">Enter your Note Body</string>

    <string name="no_notes">You don\'t have any notes yet.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="welcome_back">Welcome Back!</string>
    <string name="Log_In_to_continue">Log In to continue</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Enter your password</string>
    <string name="Log_In">Log In</string>

    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user_signup">New User! Want to Sign Up?</string>

    <string name="new_user">New User</string>
    <string name="nice_to_see">Nice to see You here!</string>
    <string name="signup">Sign Up</string>
    <string name="want_login">Want to Log in?</string>
    <string name="send_ver_email">Send Verification Email</string>

    <string name="forgotpassword">Forgot Password</string>
    <string name="dont_worry">Don\'t Worry We Are Here!</string>
    <string name="click_recover">Click Here to get Recovery Email</string>
    <string name="back_login">Go back to Login Screen</string>

</resources>