<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditNote"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/edit_note"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/title"
        android:fontFamily="@font/ubuntu_bold"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop= "10dp"
        android:layout_marginBottom="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/EditNote_textview_title"
        android:text="@string/Sample_note_title"
        android:padding="10dp"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/body"
        android:fontFamily="@font/ubuntu_bold"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop= "30dp"
        android:layout_marginBottom="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:id="@+id/EditNote_textview_body"
        android:text="@string/Sample_note_body"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:background="@drawable/rounded"
        android:autoLink="web"
        android:gravity="start"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Edit_save"
        android:text="@string/save"
        android:textColor="@color/white"
        android:fontFamily="@font/ubuntu_bold"
        android:textSize="28sp"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"/>



</LinearLayout>