<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:fontFamily="@font/ubuntu_bold"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nice_to_see"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/ubuntu_light"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        >

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"

            android:hint="@string/hint_email"
            android:textColorHint="@color/white"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"

            android:hint="@string/hint_password"
            android:textColorHint="@color/white"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:inputType="textPassword"
            android:textColor="@color/white"/>


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/Button_signup"
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded"
        android:backgroundTint="@color/blue"
        android:textSize="16sp"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/send_ver_email"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/want_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="@font/ubuntu_light"
        android:layout_gravity="center_horizontal"
        android:text="@string/back_login"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"/>

</LinearLayout>